--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#FFE500</color>
+    <color name="yellow_dark">#B8BA52</color>
+    <color name="black50">#80000000</color>
+    <color name="blue_dark">#081B27</color>
+    <color name="blue_light">#163347</color>
+    <color name="red">#BA5852</color>
+    <color name="white70">#B3FFFFFF</color>
 </resources>
