--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -32,8 +32,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
-                android:layout_marginStart="@dimen/dp_20"
-                app:layout_scrollFlags="scroll||enterAlways">
+                android:layout_marginStart="@dimen/dp_20">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/imageViewLogo"
