--- a/app/src/main/res/layout/fragment_genres_movie.xml
+++ b/app/src/main/res/layout/fragment_genres_movie.xml
@@ -40,10 +40,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewGenresMovie"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
         android:background="@color/blue_dark"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recyclerViewSelected" />
 </androidx.constraintlayout.widget.ConstraintLayout>
