--- a/app/src/main/res/layout/fragment_genres_movie.xml
+++ b/app/src/main/res/layout/fragment_genres_movie.xml
@@ -43,6 +43,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
         android:background="@color/blue_dark"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/recyclerViewSelected" />
 </androidx.constraintlayout.widget.ConstraintLayout>
