--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.detail.DetailMoviePageFragment">
+    tools:context=".ui.detail.movie.DetailMoviePageFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageBack"
