--- a/app/src/main/res/layout/fragment_genres_movie.xml
+++ b/app/src/main/res/layout/fragment_genres_movie.xml
@@ -44,5 +44,6 @@
         android:layout_marginTop="@dimen/dp_20"
         android:background="@color/blue_dark"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         app:layout_constraintTop_toBottomOf="@id/recyclerViewSelected" />
 </androidx.constraintlayout.widget.ConstraintLayout>
