--- a/app/src/main/res/layout/framgment_search.xml
+++ b/app/src/main/res/layout/framgment_search.xml
@@ -53,5 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         app:layout_constraintTop_toBottomOf="@+id/textSearchResult" />
 </androidx.constraintlayout.widget.ConstraintLayout>
